moving towards thew isoparametric axissymmetric triangle element

--- a/source/TwoD/Axissymmetric/axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/axissymmetric.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-25T11:51:01.276857Z",
-     "start_time": "2025-07-25T11:51:01.268806Z"
+     "end_time": "2025-07-25T12:43:14.604111Z",
+     "start_time": "2025-07-25T12:43:14.083795Z"
     }
    },
    "source": [
@@ -27,7 +27,7 @@
     "sp.init_printing()"
    ],
    "outputs": [],
-   "execution_count": 121
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -56,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T11:51:01.384714Z",
-     "start_time": "2025-07-25T11:51:01.377501Z"
+     "end_time": "2025-07-25T12:43:14.873275Z",
+     "start_time": "2025-07-25T12:43:14.862128Z"
     }
    },
    "cell_type": "code",
@@ -81,6 +81,10 @@
     "                   'P2': (3, 0),\n",
     "                   'P3': (0, 2)}  # example coordinates for the nodes\n",
     "\n",
+    "physical_coords_map = {'r1': physical_coords['P1'][0], 'z1': physical_coords['P1'][1],\n",
+    "                                 'r2': physical_coords['P2'][0], 'z2': physical_coords['P2'][1],\n",
+    "                                  'r3': physical_coords['P3'][0], 'z3': physical_coords['P3'][1]}\n",
+    "\n",
     "R, Z = sp.symbols('R Z')  # radial and vertical coordinates\n",
     "\n",
     "# Define the physical nodes as a matrix so it can be used a symbolic evaluation\n",
@@ -93,13 +97,13 @@
    ],
    "id": "52edc126770b2e52",
    "outputs": [],
-   "execution_count": 122
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T11:51:01.500974Z",
-     "start_time": "2025-07-25T11:51:01.496116Z"
+     "end_time": "2025-07-25T12:43:14.911880Z",
+     "start_time": "2025-07-25T12:43:14.905654Z"
     }
    },
    "cell_type": "code",
@@ -109,7 +113,7 @@
    ],
    "id": "e0746910ae4ae4e9",
    "outputs": [],
-   "execution_count": 123
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -120,8 +124,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T11:51:01.662483Z",
-     "start_time": "2025-07-25T11:51:01.598469Z"
+     "end_time": "2025-07-25T12:43:15.644031Z",
+     "start_time": "2025-07-25T12:43:14.931733Z"
     }
    },
    "cell_type": "code",
@@ -187,9 +191,7 @@
     "\n",
     "# 2. Substituting the symbolic coordinates with the physical coordinates\n",
     "# This will give us the shape functions for the specific element defined by the physical coordinates\n",
-    "N_specific_element = N_vec.subs({'r1': physical_coords['P1'][0], 'z1': physical_coords['P1'][1],\n",
-    "                                 'r2': physical_coords['P2'][0], 'z2': physical_coords['P2'][1],\n",
-    "                                  'r3': physical_coords['P3'][0], 'z3': physical_coords['P3'][1]})\n",
+    "N_specific_element = N_vec.subs(physical_coords_map)\n",
     "\n",
     "print(\"Symbolic shape function for this element:\")\n",
     "sp.pprint(N_specific_element)\n",
@@ -213,12 +215,8 @@
     "    print(f'dN{i+1}/dz = {dN_dz[i]}')\n",
     "\n",
     "# the shape function derivatives for the specific element\n",
-    "dN_dr_e = dN_dr[0].subs({'r1': physical_coords['P1'][0], 'z1': physical_coords['P1'][1],\n",
-    "                                 'r2': physical_coords['P2'][0], 'z2': physical_coords['P2'][1],\n",
-    "                                  'r3': physical_coords['P3'][0], 'z3': physical_coords['P3'][1]})\n",
-    "dN_dz_e = dN_dz[0].subs({'r1': physical_coords['P1'][0], 'z1': physical_coords['P1'][1],\n",
-    "                                 'r2': physical_coords['P2'][0], 'z2': physical_coords['P2'][1],\n",
-    "                                  'r3': physical_coords['P3'][0], 'z3': physical_coords['P3'][1]})\n",
+    "dN_dr_e = dN_dr[0].subs(physical_coords_map)\n",
+    "dN_dz_e = dN_dz[0].subs(physical_coords_map)\n",
     "sp.pprint(dN_dr_e)\n",
     "sp.pprint(dN_dz_e)"
    ],
@@ -262,7 +260,7 @@
      ]
     }
    ],
-   "execution_count": 124
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -283,8 +281,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T11:51:01.805493Z",
-     "start_time": "2025-07-25T11:51:01.776785Z"
+     "end_time": "2025-07-25T12:43:15.711166Z",
+     "start_time": "2025-07-25T12:43:15.681275Z"
     }
    },
    "cell_type": "code",
@@ -313,9 +311,7 @@
     "print(\"The shape function matrix N is {}:\".format(_N.shape))\n",
     "print()\n",
     "print('The shape function matrix N for this element:')\n",
-    "_N_e = _N.subs({'r1': physical_coords['P1'][0], 'z1': physical_coords['P1'][1],\n",
-    "                                 'r2': physical_coords['P2'][0], 'z2': physical_coords['P2'][1],\n",
-    "                                  'r3': physical_coords['P3'][0], 'z3': physical_coords['P3'][1]})\n",
+    "_N_e = _N.subs(physical_coords_map)\n",
     "sp.pprint(_N_e)\n",
     "\n",
     "print('\\nThe shape function matrix N for this element at node 1:')\n",
@@ -348,7 +344,7 @@
      ]
     }
    ],
-   "execution_count": 125
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -362,8 +358,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T11:51:01.973777Z",
-     "start_time": "2025-07-25T11:51:01.921287Z"
+     "end_time": "2025-07-25T12:43:15.796394Z",
+     "start_time": "2025-07-25T12:43:15.748624Z"
     }
    },
    "cell_type": "code",
@@ -390,9 +386,7 @@
     "B = B_symbolic()\n",
     "\n",
     "# the B matrix for this element\n",
-    "B_e = B.subs({'r1': physical_coords['P1'][0], 'z1': physical_coords['P1'][1],\n",
-    "                                 'r2': physical_coords['P2'][0], 'z2': physical_coords['P2'][1],\n",
-    "                                  'r3': physical_coords['P3'][0], 'z3': physical_coords['P3'][1]})\n",
+    "B_e = B.subs(physical_coords_map)\n",
     "# the B matrix for this element at the midpoint\n",
     "print('the B matrix for this element at the midpoint')\n",
     "sp.pprint(B_e.subs({'R': midpoint[0], 'Z': midpoint[1]}))\n",
@@ -426,7 +420,7 @@
      ]
     }
    ],
-   "execution_count": 126
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -437,8 +431,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T11:51:02.077476Z",
-     "start_time": "2025-07-25T11:51:02.070187Z"
+     "end_time": "2025-07-25T12:43:15.860924Z",
+     "start_time": "2025-07-25T12:43:15.852301Z"
     }
    },
    "cell_type": "code",
@@ -464,7 +458,7 @@
    ],
    "id": "868f825bf26732dc",
    "outputs": [],
-   "execution_count": 127
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -475,8 +469,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T11:51:31.938806Z",
-     "start_time": "2025-07-25T11:51:31.865152Z"
+     "end_time": "2025-07-25T12:43:16.013539Z",
+     "start_time": "2025-07-25T12:43:15.934130Z"
     }
    },
    "cell_type": "code",
@@ -491,18 +485,12 @@
     "\n",
     "    mp = midpoint\n",
     "\n",
-    "    B_e = B_symbolic().subs({'r1': physical_coords['P1'][0], 'z1': physical_coords['P1'][1],\n",
-    "                                 'r2': physical_coords['P2'][0], 'z2': physical_coords['P2'][1],\n",
-    "                                  'r3': physical_coords['P3'][0], 'z3': physical_coords['P3'][1]})\n",
+    "    B_e = B_symbolic().subs(physical_coords_map)\n",
     "    B = B_e.subs({'R': mp[0], 'Z': mp[1]})  # evaluate B at the midpoint\n",
     "\n",
     "    D = D_matrix().subs({nu: nu})  # the constitutive matrix\n",
     "\n",
-    "    _A = 0.5 * Rv.dot(beta()).subs({'r1': physical_coords['P1'][0], 'z1': physical_coords['P1'][1],\n",
-    "                                 'r2': physical_coords['P2'][0], 'z2': physical_coords['P2'][1],\n",
-    "                                  'r3': physical_coords['P3'][0], 'z3': physical_coords['P3'][1]}) # same as r1*beta1 + r2*beta2 + r3*beta3\n",
-    "\n",
-    "    print('Triangle Area A = {:.3f}'.format(_A))\n",
+    "    _A = 0.5 * Rv.dot(beta()).subs(physical_coords_map) # same as r1*beta1 + r2*beta2 + r3*beta3\n",
     "\n",
     "    for i in range(NNODE):\n",
     "        for j in range(NNODE):\n",
@@ -522,7 +510,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Triangle Area A = 3.000\n",
       "The stiffness matrix K for this element:\n",
       "⎡29.4524   7.0686     0.0     -7.0686  -1.1781     0.0   ⎤\n",
       "⎢                                                        ⎥\n",
@@ -538,13 +525,13 @@
      ]
     }
    ],
-   "execution_count": 131
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T11:51:02.412709Z",
-     "start_time": "2025-07-25T11:51:02.402169Z"
+     "end_time": "2025-07-25T12:43:16.081542Z",
+     "start_time": "2025-07-25T12:43:16.071172Z"
     }
    },
    "cell_type": "code",
@@ -580,7 +567,7 @@
      "text": [
       "\n",
       "The eigenvalues of the stiffness matrix K are:\n",
-      "[-0.0, -0.0, 28.93038, 61.26106, 68.44256, 171.23323]\n",
+      "[-0.0, -0.0, 14.46519, 30.63053, 34.22128, 85.61662]\n",
       "The eigenvectors for the near-zero eigenvalues are:\n",
       "Eigenvalue 1: -0.000000\n",
       "Eigenvector:\n",
@@ -593,7 +580,7 @@
      ]
     }
    ],
-   "execution_count": 129
+   "execution_count": 9
   }
  ],
  "metadata": {
