--- a/source/TwoD/Q4/Q4.ipynb
+++ b/source/TwoD/Q4/Q4.ipynb
@@ -4,7 +4,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Chapter 10.2: Linear 2D plate element\n",
+    "# Chapter 10.2: Linear 2D plate (tárcsa) element\n",
     "Daryl Logan: A first course in the finite element method, 6th edition, 2020, Chapter 10.2\n",
     "\n",
     "Note: The derivations are OK, but the numerical example in the book is not correct."
