--- a/source/TwoD/Axissymmetric/axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/axissymmetric.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-25T12:43:14.604111Z",
-     "start_time": "2025-07-25T12:43:14.083795Z"
+     "end_time": "2025-07-25T15:18:23.520774Z",
+     "start_time": "2025-07-25T15:18:23.516785Z"
     }
    },
    "source": [
@@ -27,7 +27,7 @@
     "sp.init_printing()"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -56,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T12:43:14.873275Z",
-     "start_time": "2025-07-25T12:43:14.862128Z"
+     "end_time": "2025-07-25T15:18:23.586991Z",
+     "start_time": "2025-07-25T15:18:23.579704Z"
     }
    },
    "cell_type": "code",
@@ -90,20 +90,17 @@
     "# Define the physical nodes as a matrix so it can be used a symbolic evaluation\n",
     "physical_nodes = sp.Matrix([[r1, z1], \n",
     "                            [r2, z2], \n",
-    "                            [r3, z3]])\n",
-    "\n",
-    "Rv = sp.Matrix([r1, r2, r3])  # radial coordinate vector\n",
-    "Zv = sp.Matrix([z1, z2, z3])  # vertical coordinate vector\n"
+    "                            [r3, z3]])"
    ],
    "id": "52edc126770b2e52",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T12:43:14.911880Z",
-     "start_time": "2025-07-25T12:43:14.905654Z"
+     "end_time": "2025-07-25T15:18:23.662742Z",
+     "start_time": "2025-07-25T15:18:23.658407Z"
     }
    },
    "cell_type": "code",
@@ -113,7 +110,7 @@
    ],
    "id": "e0746910ae4ae4e9",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -124,8 +121,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T12:43:15.644031Z",
-     "start_time": "2025-07-25T12:43:14.931733Z"
+     "end_time": "2025-07-25T15:18:23.780121Z",
+     "start_time": "2025-07-25T15:18:23.738933Z"
     }
    },
    "cell_type": "code",
@@ -133,42 +130,39 @@
     "%matplotlib inline\n",
     "\n",
     "def alpha():\n",
-    "    \"\"\"Shape function for the axissymmetric tri element.\"\"\"\n",
     "    return sp.Matrix([\n",
-    "        Rv[1] * Zv[2] - Rv[2] * Zv[1],\n",
-    "        Rv[2] * Zv[0] - Rv[0] * Zv[2],\n",
-    "        Rv[0] * Zv[1] - Rv[1] * Zv[0],\n",
+    "        r2 * z3 - r3 * z2,\n",
+    "        r3 * z1 - r1 * z3,\n",
+    "        r1 * z2 - r2 * z1,\n",
     "    ])\n",
     "\n",
     "def beta():\n",
-    "    \"\"\"Shape function for the axissymmetric tri element.\"\"\"\n",
     "    return sp.Matrix([\n",
-    "        Zv[1] - Zv[2],\n",
-    "        Zv[2] - Zv[0],\n",
-    "        Zv[0] - Zv[1],\n",
+    "        z2 - z3,\n",
+    "        z3 - z1,\n",
+    "        z1 - z2,\n",
     "    ])\n",
     "\n",
     "def gamma():\n",
-    "    \"\"\"Shape function for the axissymmetric tri element.\"\"\"\n",
     "    return sp.Matrix([\n",
-    "        Rv[2] - Rv[1],\n",
-    "        Rv[0] - Rv[2],\n",
-    "        Rv[1] - Rv[0],\n",
+    "        r3 - r2,\n",
+    "        r1 - r3,\n",
+    "        r2 - r1,\n",
     "    ])\n",
+    "\n",
+    "two_A = sp.Matrix([r1, r2, r3]).dot(beta())\n",
     "\n",
     "def shape_functions():\n",
     "    _alpha = alpha()\n",
     "    _beta = beta()\n",
     "    _gamma = gamma()\n",
     "\n",
-    "    two_A = Rv.dot(_beta) # same as r1*beta1 + r2*beta2 + r3*beta3\n",
     "\n",
     "    return sp.Matrix([\n",
     "        (_alpha[0] + _beta[0] * R + _gamma[0] * Z) / two_A,\n",
     "        (_alpha[1] + _beta[1] * R + _gamma[1] * Z) / two_A,\n",
     "        (_alpha[2] + _beta[2] * R + _gamma[2] * Z) / two_A,\n",
     "        ])\n",
-    "\n",
     "\n",
     "# Calculate the derivatives by s and t, symbolically\n",
     "def shape_function_derivatives() -> np.array:\n",
@@ -260,7 +254,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -281,8 +275,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T12:43:15.711166Z",
-     "start_time": "2025-07-25T12:43:15.681275Z"
+     "end_time": "2025-07-25T15:18:23.885691Z",
+     "start_time": "2025-07-25T15:18:23.858120Z"
     }
    },
    "cell_type": "code",
@@ -344,7 +338,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 19
   },
   {
    "metadata": {},
@@ -358,8 +352,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T12:43:15.796394Z",
-     "start_time": "2025-07-25T12:43:15.748624Z"
+     "end_time": "2025-07-25T16:45:25.447630Z",
+     "start_time": "2025-07-25T16:45:25.423209Z"
     }
    },
    "cell_type": "code",
@@ -369,8 +363,6 @@
     "    _alpha = alpha()\n",
     "    _beta = beta()\n",
     "    _gamma = gamma()\n",
-    "\n",
-    "    two_A = Rv.dot(_beta) # same as r1*beta1 + r2*beta2 + r3*beta3\n",
     "\n",
     "    B = sp.zeros(4, ND*NNODE)\n",
     "    for i in range(NNODE):\n",
@@ -416,11 +408,12 @@
       "⎢                              ⎥\n",
       "⎢nan    0    1/3   0   nan   0 ⎥\n",
       "⎢                              ⎥\n",
-      "⎣-1/2  -1/3   0   1/3  1/2   0 ⎦\n"
+      "⎣-1/2  -1/3   0   1/3  1/2   0 ⎦\n",
+      "0.7745966692414834\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 24
   },
   {
    "metadata": {},
@@ -431,8 +424,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T12:43:15.860924Z",
-     "start_time": "2025-07-25T12:43:15.852301Z"
+     "end_time": "2025-07-25T15:18:24.126882Z",
+     "start_time": "2025-07-25T15:18:24.119451Z"
     }
    },
    "cell_type": "code",
@@ -458,7 +451,7 @@
    ],
    "id": "868f825bf26732dc",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 21
   },
   {
    "metadata": {},
@@ -469,8 +462,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T12:43:16.013539Z",
-     "start_time": "2025-07-25T12:43:15.934130Z"
+     "end_time": "2025-07-25T15:18:24.306450Z",
+     "start_time": "2025-07-25T15:18:24.218599Z"
     }
    },
    "cell_type": "code",
@@ -490,7 +483,7 @@
     "\n",
     "    D = D_matrix().subs({nu: nu})  # the constitutive matrix\n",
     "\n",
-    "    _A = 0.5 * Rv.dot(beta()).subs(physical_coords_map) # same as r1*beta1 + r2*beta2 + r3*beta3\n",
+    "    _A = 0.5 * two_A.subs(physical_coords_map)\n",
     "\n",
     "    for i in range(NNODE):\n",
     "        for j in range(NNODE):\n",
@@ -525,13 +518,13 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T12:43:16.081542Z",
-     "start_time": "2025-07-25T12:43:16.071172Z"
+     "end_time": "2025-07-25T15:18:24.393154Z",
+     "start_time": "2025-07-25T15:18:24.375455Z"
     }
    },
    "cell_type": "code",
@@ -580,7 +573,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 23
   }
  ],
  "metadata": {
