--- a/source/TwoD/Q4/Q4.ipynb
+++ b/source/TwoD/Q4/Q4.ipynb
@@ -938,7 +938,8 @@
     "        'weight': [1, 1]\n",
     "    },\n",
     "    3: {\n",
-    "        'point': [-np.sqrt(3 / 5), 0, np.sqrt(3 / 5)],\n",
+    "        # 'point': [-np.sqrt(3 / 5), 0, np.sqrt(3 / 5)],\n",
+    "        'point': [-0.7745966, 0, 0.7745966],\n",
     "        'weight': [5 / 9,  8 / 9, 5 / 9]\n",
     "    },\n",
     "    4: {\n",
