moving towards thew isoparametric axissymmetric triangle element

--- a/source/TwoD/Axissymmetric/axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/axissymmetric.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:18:23.520774Z",
-     "start_time": "2025-07-25T15:18:23.516785Z"
+     "end_time": "2025-07-25T19:53:23.848858Z",
+     "start_time": "2025-07-25T19:53:23.844486Z"
     }
    },
    "source": [
@@ -27,7 +27,7 @@
     "sp.init_printing()"
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 43
   },
   {
    "metadata": {},
@@ -56,8 +56,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:18:23.586991Z",
-     "start_time": "2025-07-25T15:18:23.579704Z"
+     "end_time": "2025-07-25T19:53:23.874583Z",
+     "start_time": "2025-07-25T19:53:23.866957Z"
     }
    },
    "cell_type": "code",
@@ -77,9 +77,9 @@
     "physical_coords = {'P1': (4, 0),\n",
     "                   'P2': (6, 2),\n",
     "                   'P3': (3, 1)}  # example coordinates for the nodes\n",
-    "physical_coords = {'P1': (0, 0),\n",
-    "                   'P2': (3, 0),\n",
-    "                   'P3': (0, 2)}  # example coordinates for the nodes\n",
+    "# physical_coords = {'P1': (0, 0),\n",
+    "#                    'P2': (3, 0),\n",
+    "#                    'P3': (0, 2)}  # example coordinates for the nodes\n",
     "\n",
     "physical_coords_map = {'r1': physical_coords['P1'][0], 'z1': physical_coords['P1'][1],\n",
     "                                 'r2': physical_coords['P2'][0], 'z2': physical_coords['P2'][1],\n",
@@ -94,13 +94,13 @@
    ],
    "id": "52edc126770b2e52",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 44
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:18:23.662742Z",
-     "start_time": "2025-07-25T15:18:23.658407Z"
+     "end_time": "2025-07-25T19:53:23.989337Z",
+     "start_time": "2025-07-25T19:53:23.985530Z"
     }
    },
    "cell_type": "code",
@@ -110,7 +110,7 @@
    ],
    "id": "e0746910ae4ae4e9",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 45
   },
   {
    "metadata": {},
@@ -121,8 +121,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:18:23.780121Z",
-     "start_time": "2025-07-25T15:18:23.738933Z"
+     "end_time": "2025-07-25T19:53:24.103256Z",
+     "start_time": "2025-07-25T19:53:24.058042Z"
     }
    },
    "cell_type": "code",
@@ -221,17 +221,17 @@
      "output_type": "stream",
      "text": [
       "Symbolic shape function for this element:\n",
-      "⎡  R   Z    ⎤\n",
-      "⎢- ─ - ─ + 1⎥\n",
-      "⎢  3   2    ⎥\n",
+      "⎡  R   3⋅Z  ⎤\n",
+      "⎢  ─ - ───  ⎥\n",
+      "⎢  4    4   ⎥\n",
       "⎢           ⎥\n",
-      "⎢     R     ⎥\n",
-      "⎢     ─     ⎥\n",
-      "⎢     3     ⎥\n",
+      "⎢ R   Z     ⎥\n",
+      "⎢ ─ + ─ - 1 ⎥\n",
+      "⎢ 4   4     ⎥\n",
       "⎢           ⎥\n",
-      "⎢     Z     ⎥\n",
-      "⎢     ─     ⎥\n",
-      "⎣     2     ⎦\n",
+      "⎢  R   Z    ⎥\n",
+      "⎢- ─ + ─ + 2⎥\n",
+      "⎣  2   2    ⎦\n",
       "\n",
       "Values at Node 1:\n",
       "[1  0  0]\n",
@@ -249,12 +249,12 @@
       "dN2/dz = (r1 - r3)/(r1*(z2 - z3) + r2*(-z1 + z3) + r3*(z1 - z2))\n",
       "dN3/dr = (z1 - z2)/(r1*(z2 - z3) + r2*(-z1 + z3) + r3*(z1 - z2))\n",
       "dN3/dz = (-r1 + r2)/(r1*(z2 - z3) + r2*(-z1 + z3) + r3*(z1 - z2))\n",
-      "-1/3\n",
-      "-1/2\n"
+      "1/4\n",
+      "-3/4\n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 46
   },
   {
    "metadata": {},
@@ -275,8 +275,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:18:23.885691Z",
-     "start_time": "2025-07-25T15:18:23.858120Z"
+     "end_time": "2025-07-25T19:53:24.212478Z",
+     "start_time": "2025-07-25T19:53:24.185020Z"
     }
    },
    "cell_type": "code",
@@ -323,13 +323,13 @@
       "The shape function matrix N is (2, 6):\n",
       "\n",
       "The shape function matrix N for this element:\n",
-      "⎡  R   Z                   R     Z   ⎤\n",
-      "⎢- ─ - ─ + 1       0       ─  0  ─  0⎥\n",
-      "⎢  3   2                   3     2   ⎥\n",
-      "⎢                                    ⎥\n",
-      "⎢               R   Z         R     Z⎥\n",
-      "⎢     0       - ─ - ─ + 1  0  ─  0  ─⎥\n",
-      "⎣               3   2         3     2⎦\n",
+      "⎡R   3⋅Z           R   Z                   R   Z                 ⎤\n",
+      "⎢─ - ───     0     ─ + ─ - 1      0      - ─ + ─ + 2       0     ⎥\n",
+      "⎢4    4            4   4                   2   2                 ⎥\n",
+      "⎢                                                                ⎥\n",
+      "⎢         R   3⋅Z             R   Z                     R   Z    ⎥\n",
+      "⎢   0     ─ - ───      0      ─ + ─ - 1       0       - ─ + ─ + 2⎥\n",
+      "⎣         4    4              4   4                     2   2    ⎦\n",
       "\n",
       "The shape function matrix N for this element at node 1:\n",
       "⎡0.3333    0     0.3333    0     0.3333    0   ⎤\n",
@@ -338,7 +338,7 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 47
   },
   {
    "metadata": {},
@@ -352,8 +352,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T16:45:25.447630Z",
-     "start_time": "2025-07-25T16:45:25.423209Z"
+     "end_time": "2025-07-25T19:53:24.328273Z",
+     "start_time": "2025-07-25T19:53:24.304865Z"
     }
    },
    "cell_type": "code",
@@ -385,7 +385,7 @@
     "\n",
     "# the B matrix for this element at node 1. Note, the node 1 is at the origin (0, 0) so we get multiple nan values due to division by zero\n",
     "print('the B matrix for this element at node 1. Note, the node 1 is at the origin (0, 0) so we get multiple nan values due to division by zero')\n",
-    "sp.pprint(B_e.subs({'R': physical_coords['P1'][0], 'Z': physical_coords['P1'][1]}))"
+    "sp.pprint(B_e.subs({'R': physical_coords['P1'][0], 'Z': physical_coords['P1'][1]}))\n"
    ],
    "id": "bf8439bf2ac03c1e",
    "outputs": [
@@ -394,26 +394,25 @@
      "output_type": "stream",
      "text": [
       "the B matrix for this element at the midpoint\n",
-      "⎡      -1/3          0    1/3   0           0           0 ⎤\n",
-      "⎢                                                         ⎥\n",
-      "⎢        0          -1/2   0    0           0          1/2⎥\n",
-      "⎢                                                         ⎥\n",
-      "⎢0.333333333333333   0    1/3   0   0.333333333333333   0 ⎥\n",
-      "⎢                                                         ⎥\n",
-      "⎣      -1/2         -1/3   0   1/3         1/2          0 ⎦\n",
+      "⎡       1/4           0           1/4           0         -1/2          0  ⎤\n",
+      "⎢                                                                          ⎥\n",
+      "⎢        0           -3/4          0           1/4          0          1/2 ⎥\n",
+      "⎢                                                                          ⎥\n",
+      "⎢0.0769230769230769   0    0.0769230769230769   0   0.076923076923077   0  ⎥\n",
+      "⎢                                                                          ⎥\n",
+      "⎣       -3/4         1/4          1/4          1/4         1/2         -1/2⎦\n",
       "the B matrix for this element at node 1. Note, the node 1 is at the origin (0, 0) so we get multiple nan values due to division by zero\n",
-      "⎡-1/3   0    1/3   0    0    0 ⎤\n",
-      "⎢                              ⎥\n",
-      "⎢ 0    -1/2   0    0    0   1/2⎥\n",
-      "⎢                              ⎥\n",
-      "⎢nan    0    1/3   0   nan   0 ⎥\n",
-      "⎢                              ⎥\n",
-      "⎣-1/2  -1/3   0   1/3  1/2   0 ⎦\n",
-      "0.7745966692414834\n"
+      "⎡1/4    0    1/4   0   -1/2   0  ⎤\n",
+      "⎢                                ⎥\n",
+      "⎢ 0    -3/4   0   1/4   0    1/2 ⎥\n",
+      "⎢                                ⎥\n",
+      "⎢1/4    0     0    0    0     0  ⎥\n",
+      "⎢                                ⎥\n",
+      "⎣-3/4  1/4   1/4  1/4  1/2   -1/2⎦\n"
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 48
   },
   {
    "metadata": {},
@@ -424,8 +423,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:18:24.126882Z",
-     "start_time": "2025-07-25T15:18:24.119451Z"
+     "end_time": "2025-07-25T19:53:24.363347Z",
+     "start_time": "2025-07-25T19:53:24.357578Z"
     }
    },
    "cell_type": "code",
@@ -451,7 +450,7 @@
    ],
    "id": "868f825bf26732dc",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 49
   },
   {
    "metadata": {},
@@ -462,8 +461,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:18:24.306450Z",
-     "start_time": "2025-07-25T15:18:24.218599Z"
+     "end_time": "2025-07-25T19:53:24.559318Z",
+     "start_time": "2025-07-25T19:53:24.474531Z"
     }
    },
    "cell_type": "code",
@@ -504,27 +503,27 @@
      "output_type": "stream",
      "text": [
       "The stiffness matrix K for this element:\n",
-      "⎡29.4524   7.0686     0.0     -7.0686  -1.1781     0.0   ⎤\n",
-      "⎢                                                        ⎥\n",
-      "⎢7.0686    36.521   -14.1372  -4.7124  -14.1372  -31.8086⎥\n",
-      "⎢                                                        ⎥\n",
-      "⎢  0.0    -14.1372  37.6991      0     18.8496   14.1372 ⎥\n",
-      "⎢                                                        ⎥\n",
-      "⎢-7.0686  -4.7124      0      4.7124    7.0686      0    ⎥\n",
-      "⎢                                                        ⎥\n",
-      "⎢-1.1781  -14.1372  18.8496   7.0686    24.74     7.0686 ⎥\n",
-      "⎢                                                        ⎥\n",
-      "⎣  0.0    -31.8086  14.1372      0      7.0686   31.8086 ⎦\n"
+      "⎡98.7789   -53.0144    6.8873   -12.9591  -92.0728   65.9734 ⎤\n",
+      "⎢                                                            ⎥\n",
+      "⎢-53.0144  214.4137   -22.3838  -61.2611  54.1925   -153.1526⎥\n",
+      "⎢                                                            ⎥\n",
+      "⎢ 6.8873   -22.3838   37.5179   17.6715   -30.8118   4.7124  ⎥\n",
+      "⎢                                                            ⎥\n",
+      "⎢-12.9591  -61.2611   17.6715   30.6305    2.3562    30.6305 ⎥\n",
+      "⎢                                                            ⎥\n",
+      "⎢-92.0728   54.1925   -30.8118   2.3562   115.2723  -56.5487 ⎥\n",
+      "⎢                                                            ⎥\n",
+      "⎣65.9734   -153.1526   4.7124   30.6305   -56.5487  122.5221 ⎦\n"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 50
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T15:18:24.393154Z",
-     "start_time": "2025-07-25T15:18:24.375455Z"
+     "end_time": "2025-07-25T19:53:24.648691Z",
+     "start_time": "2025-07-25T19:53:24.640209Z"
     }
    },
    "cell_type": "code",
@@ -560,20 +559,22 @@
      "text": [
       "\n",
       "The eigenvalues of the stiffness matrix K are:\n",
-      "[-0.0, -0.0, 14.46519, 30.63053, 34.22128, 85.61662]\n",
+      "[-0.0, -0.0, 5.39418, 56.11719, 153.15264, 404.4714]\n",
       "The eigenvectors for the near-zero eigenvalues are:\n",
       "Eigenvalue 1: -0.000000\n",
       "Eigenvector:\n",
-      "[-0.19971019  0.57175325 -0.19971019 -0.32694263  0.39942039  0.57175325]\n",
+      "[ 1.51150373e-01  4.81183543e-01 -1.51150373e-01  7.83484290e-01\n",
+      "  3.60822483e-15  3.30033170e-01]\n",
       "\n",
       "Eigenvalue 2: -0.000000\n",
       "Eigenvector:\n",
-      "[-0.1067609  -0.34902174 -0.1067609  -0.82944579  0.2135218  -0.34902174]\n",
+      "[ 3.56585985e-01 -3.44183668e-01 -3.56585985e-01  3.68988301e-01\n",
+      " -4.57966998e-16 -7.00769653e-01]\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 51
   }
  ],
  "metadata": {
