--- a/source/TwoD/Axissymmetric/axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/axissymmetric.ipynb
@@ -17,8 +17,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:23.848858Z",
-     "start_time": "2025-07-25T19:53:23.844486Z"
+     "end_time": "2025-07-26T07:03:02.232521Z",
+     "start_time": "2025-07-26T07:03:02.215361Z"
     }
    },
    "source": [
@@ -27,7 +27,7 @@
     "sp.init_printing()"
    ],
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 60
   },
   {
    "metadata": {},
@@ -56,16 +56,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:23.874583Z",
-     "start_time": "2025-07-25T19:53:23.866957Z"
+     "end_time": "2025-07-26T07:03:02.307344Z",
+     "start_time": "2025-07-26T07:03:02.299782Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "E = 2.0e5  # Young's modulus in Pa\n",
-    "nu = 0.25  # Poisson's ratio\n",
-    "t = 1000  # thickness in mm\n",
-    "t /= 1000  # convert to m\n",
+    "E = 200e9  # Young's modulus in Pa\n",
+    "nu = 0.3  # Poisson's ratio\n",
     "\n",
     "# Define symbolic physical coordinates\n",
     "r1, z1, r2, z2, r3, z3 = sp.symbols('r1 z1 r2 z2 r3 z3')\n",
@@ -74,8 +72,8 @@
     "# physical_coords = {'P1': (0, 0),\n",
     "#                    'P2': (1, 0),\n",
     "#                    'P3': (0, 1)}  # example coordinates for the nodes\n",
-    "physical_coords = {'P1': (4, 0),\n",
-    "                   'P2': (6, 2),\n",
+    "physical_coords = {'P1': (3, 0),\n",
+    "                   'P2': (4, 0),\n",
     "                   'P3': (3, 1)}  # example coordinates for the nodes\n",
     "# physical_coords = {'P1': (0, 0),\n",
     "#                    'P2': (3, 0),\n",
@@ -94,13 +92,13 @@
    ],
    "id": "52edc126770b2e52",
    "outputs": [],
-   "execution_count": 44
+   "execution_count": 61
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:23.989337Z",
-     "start_time": "2025-07-25T19:53:23.985530Z"
+     "end_time": "2025-07-26T07:03:02.371395Z",
+     "start_time": "2025-07-26T07:03:02.366274Z"
     }
    },
    "cell_type": "code",
@@ -110,7 +108,7 @@
    ],
    "id": "e0746910ae4ae4e9",
    "outputs": [],
-   "execution_count": 45
+   "execution_count": 62
   },
   {
    "metadata": {},
@@ -121,8 +119,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:24.103256Z",
-     "start_time": "2025-07-25T19:53:24.058042Z"
+     "end_time": "2025-07-26T07:03:02.494179Z",
+     "start_time": "2025-07-26T07:03:02.440769Z"
     }
    },
    "cell_type": "code",
@@ -151,6 +149,14 @@
     "    ])\n",
     "\n",
     "two_A = sp.Matrix([r1, r2, r3]).dot(beta())\n",
+    "print('The value of two_A is:')\n",
+    "sp.pprint(two_A.subs(physical_coords_map))\n",
+    "\n",
+    "# this is an alternative way of calculating the area of the triangle\n",
+    "# using the determinant of the matrix formed by the coordinates of the nodes\n",
+    "Ae = sum(0.5 * alpha())\n",
+    "print('The value of Ae is:')\n",
+    "sp.pprint(Ae.subs(physical_coords_map))\n",
     "\n",
     "def shape_functions():\n",
     "    _alpha = alpha()\n",
@@ -220,18 +226,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The value of two_A is:\n",
+      "1\n",
+      "The value of Ae is:\n",
+      "0.500000000000000\n",
       "Symbolic shape function for this element:\n",
-      "⎡  R   3⋅Z  ⎤\n",
-      "⎢  ─ - ───  ⎥\n",
-      "⎢  4    4   ⎥\n",
-      "⎢           ⎥\n",
-      "⎢ R   Z     ⎥\n",
-      "⎢ ─ + ─ - 1 ⎥\n",
-      "⎢ 4   4     ⎥\n",
-      "⎢           ⎥\n",
-      "⎢  R   Z    ⎥\n",
-      "⎢- ─ + ─ + 2⎥\n",
-      "⎣  2   2    ⎦\n",
+      "⎡-R - Z + 4⎤\n",
+      "⎢          ⎥\n",
+      "⎢  R - 3   ⎥\n",
+      "⎢          ⎥\n",
+      "⎣    Z     ⎦\n",
       "\n",
       "Values at Node 1:\n",
       "[1  0  0]\n",
@@ -249,12 +253,12 @@
       "dN2/dz = (r1 - r3)/(r1*(z2 - z3) + r2*(-z1 + z3) + r3*(z1 - z2))\n",
       "dN3/dr = (z1 - z2)/(r1*(z2 - z3) + r2*(-z1 + z3) + r3*(z1 - z2))\n",
       "dN3/dz = (-r1 + r2)/(r1*(z2 - z3) + r2*(-z1 + z3) + r3*(z1 - z2))\n",
-      "1/4\n",
-      "-3/4\n"
+      "-1\n",
+      "-1\n"
      ]
     }
    ],
-   "execution_count": 46
+   "execution_count": 63
   },
   {
    "metadata": {},
@@ -275,8 +279,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:24.212478Z",
-     "start_time": "2025-07-25T19:53:24.185020Z"
+     "end_time": "2025-07-26T07:03:02.590297Z",
+     "start_time": "2025-07-26T07:03:02.565122Z"
     }
    },
    "cell_type": "code",
@@ -323,13 +327,9 @@
       "The shape function matrix N is (2, 6):\n",
       "\n",
       "The shape function matrix N for this element:\n",
-      "⎡R   3⋅Z           R   Z                   R   Z                 ⎤\n",
-      "⎢─ - ───     0     ─ + ─ - 1      0      - ─ + ─ + 2       0     ⎥\n",
-      "⎢4    4            4   4                   2   2                 ⎥\n",
-      "⎢                                                                ⎥\n",
-      "⎢         R   3⋅Z             R   Z                     R   Z    ⎥\n",
-      "⎢   0     ─ - ───      0      ─ + ─ - 1       0       - ─ + ─ + 2⎥\n",
-      "⎣         4    4              4   4                     2   2    ⎦\n",
+      "⎡-R - Z + 4      0       R - 3    0    Z  0⎤\n",
+      "⎢                                          ⎥\n",
+      "⎣    0       -R - Z + 4    0    R - 3  0  Z⎦\n",
       "\n",
       "The shape function matrix N for this element at node 1:\n",
       "⎡0.3333    0     0.3333    0     0.3333    0   ⎤\n",
@@ -338,7 +338,7 @@
      ]
     }
    ],
-   "execution_count": 47
+   "execution_count": 64
   },
   {
    "metadata": {},
@@ -352,8 +352,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:24.328273Z",
-     "start_time": "2025-07-25T19:53:24.304865Z"
+     "end_time": "2025-07-26T07:03:02.677530Z",
+     "start_time": "2025-07-26T07:03:02.651020Z"
     }
    },
    "cell_type": "code",
@@ -367,10 +367,14 @@
     "    B = sp.zeros(4, ND*NNODE)\n",
     "    for i in range(NNODE):\n",
     "        B[0, 2*i] = _beta[i] / two_A\n",
-    "        B[1, 2*i+1] = _gamma[i] / two_A\n",
-    "        B[2, 2*i] = (_alpha[i] / R + _beta[i] + _gamma[i] * Z / R) / two_A\n",
+    "        B[1, 2*i] = (_alpha[i] / R + _beta[i] + _gamma[i] * Z / R) / two_A\n",
+    "        B[2, 2*i+1] = _gamma[i] / two_A\n",
     "        B[3, 2*i] = _gamma[i] / two_A\n",
     "        B[3, 2*i+1] = _beta[i] / two_A\n",
+    "\n",
+    "        # print this block only\n",
+    "        # print(f'B block for node {i+1}:')\n",
+    "        # sp.pprint(B[:, 2*i:2*i+2].subs(physical_coords_map))\n",
     "\n",
     "    return B\n",
     "\n",
@@ -380,6 +384,9 @@
     "# the B matrix for this element\n",
     "B_e = B.subs(physical_coords_map)\n",
     "# the B matrix for this element at the midpoint\n",
+    "print('the B matrix for this element is')\n",
+    "sp.pprint(B_e)\n",
+    "\n",
     "print('the B matrix for this element at the midpoint')\n",
     "sp.pprint(B_e.subs({'R': midpoint[0], 'Z': midpoint[1]}))\n",
     "\n",
@@ -393,26 +400,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "the B matrix for this element is\n",
+      "⎡    -1      0     1    0  0  0⎤\n",
+      "⎢                              ⎥\n",
+      "⎢     Z   4          3     Z   ⎥\n",
+      "⎢-1 - ─ + ─  0   1 - ─  0  ─  0⎥\n",
+      "⎢     R   R          R     R   ⎥\n",
+      "⎢                              ⎥\n",
+      "⎢    0       -1    0    0  0  1⎥\n",
+      "⎢                              ⎥\n",
+      "⎣    -1      -1    0    1  1  0⎦\n",
       "the B matrix for this element at the midpoint\n",
-      "⎡       1/4           0           1/4           0         -1/2          0  ⎤\n",
-      "⎢                                                                          ⎥\n",
-      "⎢        0           -3/4          0           1/4          0          1/2 ⎥\n",
-      "⎢                                                                          ⎥\n",
-      "⎢0.0769230769230769   0    0.0769230769230769   0   0.076923076923077   0  ⎥\n",
-      "⎢                                                                          ⎥\n",
-      "⎣       -3/4         1/4          1/4          1/4         1/2         -1/2⎦\n",
+      "⎡-1   0    1   0   0   0⎤\n",
+      "⎢                       ⎥\n",
+      "⎢0.1  0   0.1  0  0.1  0⎥\n",
+      "⎢                       ⎥\n",
+      "⎢ 0   -1   0   0   0   1⎥\n",
+      "⎢                       ⎥\n",
+      "⎣-1   -1   0   1   1   0⎦\n",
       "the B matrix for this element at node 1. Note, the node 1 is at the origin (0, 0) so we get multiple nan values due to division by zero\n",
-      "⎡1/4    0    1/4   0   -1/2   0  ⎤\n",
-      "⎢                                ⎥\n",
-      "⎢ 0    -3/4   0   1/4   0    1/2 ⎥\n",
-      "⎢                                ⎥\n",
-      "⎢1/4    0     0    0    0     0  ⎥\n",
-      "⎢                                ⎥\n",
-      "⎣-3/4  1/4   1/4  1/4  1/2   -1/2⎦\n"
+      "⎡-1   0   1  0  0  0⎤\n",
+      "⎢                   ⎥\n",
+      "⎢1/3  0   0  0  0  0⎥\n",
+      "⎢                   ⎥\n",
+      "⎢ 0   -1  0  0  0  1⎥\n",
+      "⎢                   ⎥\n",
+      "⎣-1   -1  0  1  1  0⎦\n"
      ]
     }
    ],
-   "execution_count": 48
+   "execution_count": 65
   },
   {
    "metadata": {},
@@ -423,8 +440,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:24.363347Z",
-     "start_time": "2025-07-25T19:53:24.357578Z"
+     "end_time": "2025-07-26T07:03:02.769676Z",
+     "start_time": "2025-07-26T07:03:02.742996Z"
     }
    },
    "cell_type": "code",
@@ -438,19 +455,43 @@
     "    D[0, 0] = 1 - nu\n",
     "    D[0, 1] = nu\n",
     "    D[0, 2] = nu\n",
+    "\n",
     "    D[1, 0] = nu\n",
     "    D[1, 1] = 1 - nu\n",
     "    D[1, 2] = nu\n",
+    "\n",
     "    D[2, 0] = nu\n",
     "    D[2, 1] = nu\n",
     "    D[2, 2] = 1 - nu\n",
+    "\n",
     "    D[3, 3] = (1 - 2 * nu) / 2\n",
     "\n",
-    "    return D"
+    "    D *= E / ((1 - 2 * nu) * (1 + nu))\n",
+    "\n",
+    "    return D\n",
+    "\n",
+    "D = D_matrix()\n",
+    "sp.pprint(D.applyfunc(lambda x: round(x/1e9, 2)))\n",
+    "print(D.T == D)"
    ],
    "id": "868f825bf26732dc",
-   "outputs": [],
-   "execution_count": 49
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⎡269.23  115.38  115.38    0  ⎤\n",
+      "⎢                             ⎥\n",
+      "⎢115.38  269.23  115.38    0  ⎥\n",
+      "⎢                             ⎥\n",
+      "⎢115.38  115.38  269.23    0  ⎥\n",
+      "⎢                             ⎥\n",
+      "⎣  0       0       0     76.92⎦\n",
+      "True\n"
+     ]
+    }
+   ],
+   "execution_count": 66
   },
   {
    "metadata": {},
@@ -461,8 +502,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:24.559318Z",
-     "start_time": "2025-07-25T19:53:24.474531Z"
+     "end_time": "2025-07-26T07:23:20.076202Z",
+     "start_time": "2025-07-26T07:23:14.054502Z"
     }
    },
    "cell_type": "code",
@@ -473,28 +514,67 @@
     "    This is method 3 from the book.\n",
     "    It evaluates the B matrix at the midpoint of the element and then calculates the stiffness matrix.\n",
     "    \"\"\"\n",
-    "    K = sp.zeros(ND * NNODE, ND * NNODE)  # the stiffness matrix\n",
+    "    # K = sp.zeros(ND * NNODE, ND * NNODE)  # the stiffness matrix\n",
     "\n",
     "    mp = midpoint\n",
+    "    print(midpoint)\n",
     "\n",
     "    B_e = B_symbolic().subs(physical_coords_map)\n",
     "    B = B_e.subs({'R': mp[0], 'Z': mp[1]})  # evaluate B at the midpoint\n",
     "\n",
-    "    D = D_matrix().subs({nu: nu})  # the constitutive matrix\n",
+    "    D = D_matrix()  # the constitutive matrix\n",
     "\n",
     "    _A = 0.5 * two_A.subs(physical_coords_map)\n",
+    "    _A = Ae.subs(physical_coords_map)\n",
     "\n",
-    "    for i in range(NNODE):\n",
-    "        for j in range(NNODE):\n",
-    "            K += (B.T * D * B) * 2 * np.pi * mp[0] * _A\n",
+    "    K = (B.T * D * B) * 2 * np.pi * mp[0] * _A\n",
     "\n",
     "    return K\n",
     "\n",
     "# The stiffness matrix for this element\n",
     "K_e = K_matrix_3()\n",
-    "K_e_formatted = K_e.applyfunc(lambda x: x.round(4))\n",
-    "print(\"The stiffness matrix K for this element:\")\n",
-    "sp.pprint(K_e_formatted)"
+    "K_e_formatted = K_e.applyfunc(lambda x: (x/1e12).round(4))\n",
+    "print(\"The stiffness matrix K_3 for this element:\")\n",
+    "sp.pprint(K_e_formatted)\n",
+    "\n",
+    "def K_matrix_2():\n",
+    "    \"\"\"\n",
+    "    Calculates the stiffness matrix for the non-isoparametric axissymmetric element\n",
+    "    by performing a double integration over the element's physical area.\n",
+    "    \"\"\"\n",
+    "    # Get the symbolic B and D matrices from the non-isoparametric formulation.\n",
+    "    # B is a function of physical coordinates R and Z.\n",
+    "    B_sym = B_symbolic()\n",
+    "    D_sym = D_matrix()\n",
+    "\n",
+    "    # The integrand for the stiffness matrix is B.T * D * B * 2 * pi * r.\n",
+    "    # The variable for r in your B_symbolic function is R.\n",
+    "    # The variable for z is Z.\n",
+    "    integrand = B_sym.T * D_sym * B_sym * 2 * sp.pi * R\n",
+    "\n",
+    "    # Substitute the known physical coordinates of the nodes into the integrand.\n",
+    "    integrand_element = integrand.subs(physical_coords_map)\n",
+    "\n",
+    "    # Perform the double integration over the triangular area.\n",
+    "    # The order of integration is dz first, then dr.\n",
+    "    # Outer integral: dr from r=3 to r=4\n",
+    "    # Inner integral: dz from z=0 to z=4-r\n",
+    "    # Note: In sympy, the integration variables are specified from inner to outer.\n",
+    "    K = sp.integrate(integrand_element, (Z, 0, 4 - R), (R, 3, 4))\n",
+    "\n",
+    "    return K\n",
+    "\n",
+    "# Calculate the stiffness matrix\n",
+    "K_integrated = K_matrix_2()\n",
+    "print(\"The fully integrated stiffness matrix K is:\")\n",
+    "sp.pprint(K_integrated.evalf().applyfunc(lambda x: round(x/1e12, 4)))\n",
+    "\n",
+    "# comparing the results of the two methods\n",
+    "# K_e is the stiffness matrix calculated using method 3 from the book\n",
+    "# K_integrated is the stiffness matrix calculated by performing a double integration over the element's physical\n",
+    "Ke = np.array(K_e).astype(np.float64)\n",
+    "K_integrated_np = np.array(K_integrated).astype(np.float64)\n",
+    "print(Ke / K_integrated_np)  # should be close to 1\n"
    ],
    "id": "2b891ea48d510442",
    "outputs": [
@@ -502,30 +582,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The stiffness matrix K for this element:\n",
-      "⎡98.7789   -53.0144    6.8873   -12.9591  -92.0728   65.9734 ⎤\n",
-      "⎢                                                            ⎥\n",
-      "⎢-53.0144  214.4137   -22.3838  -61.2611  54.1925   -153.1526⎥\n",
-      "⎢                                                            ⎥\n",
-      "⎢ 6.8873   -22.3838   37.5179   17.6715   -30.8118   4.7124  ⎥\n",
-      "⎢                                                            ⎥\n",
-      "⎢-12.9591  -61.2611   17.6715   30.6305    2.3562    30.6305 ⎥\n",
-      "⎢                                                            ⎥\n",
-      "⎢-92.0728   54.1925   -30.8118   2.3562   115.2723  -56.5487 ⎥\n",
-      "⎢                                                            ⎥\n",
-      "⎣65.9734   -153.1526   4.7124   30.6305   -56.5487  122.5221 ⎦\n"
+      "(3.3333333333333335, 0.3333333333333333)\n",
+      "The stiffness matrix K_3 for this element:\n",
+      "⎡3.4114    1.893   -2.7912  -0.8055  -0.8982  -1.0875⎤\n",
+      "⎢                                                    ⎥\n",
+      "⎢ 1.893   3.6249   -1.3291  -0.8055  -0.9264  -2.8194⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-2.7912  -1.3291  3.0892      0      0.149   1.3291 ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-0.8055  -0.8055     0     0.8055   0.8055      0   ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-0.8982  -0.9264   0.149   0.8055   0.8337   0.1208 ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎣-1.0875  -2.8194  1.3291      0     0.1208   2.8194 ⎦\n",
+      "The fully integrated stiffness matrix K is:\n",
+      "⎡3.4274    1.893   -2.7986  -0.8055  -0.9043  -1.0875⎤\n",
+      "⎢                                                    ⎥\n",
+      "⎢ 1.893   3.6249   -1.3291  -0.8055  -0.9264  -2.8194⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-2.7986  -1.3291  3.1003      0     0.1416   1.3291 ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-0.8055  -0.8055     0     0.8055   0.8055      0   ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-0.9043  -0.9264  0.1416   0.8055   0.8497   0.1208 ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎣-1.0875  -2.8194  1.3291      0     0.1208   2.8194 ⎦\n",
+      "[[0.99534093 1.         0.99735867 1.         0.9932404  1.        ]\n",
+      " [1.         1.         1.         1.         1.         1.        ]\n",
+      " [0.99735867 1.         0.99642361        nan 1.05219125 1.        ]\n",
+      " [1.         1.                nan 1.         1.                nan]\n",
+      " [0.9932404  1.         1.05219125 1.         0.9812068  1.        ]\n",
+      " [1.         1.         1.                nan 1.         1.        ]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jkbgbr\\AppData\\Local\\Temp\\ipykernel_17396\\1767369459.py:67: RuntimeWarning: invalid value encountered in divide\n",
+      "  print(Ke / K_integrated_np)  # should be close to 1\n"
      ]
     }
    ],
-   "execution_count": 50
+   "execution_count": 78
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:24.648691Z",
-     "start_time": "2025-07-25T19:53:24.640209Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# the stiffness matrix as a numpy array\n",
@@ -552,29 +654,8 @@
     "    print()"
    ],
    "id": "974b1fe355981d1a",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The eigenvalues of the stiffness matrix K are:\n",
-      "[-0.0, -0.0, 5.39418, 56.11719, 153.15264, 404.4714]\n",
-      "The eigenvectors for the near-zero eigenvalues are:\n",
-      "Eigenvalue 1: -0.000000\n",
-      "Eigenvector:\n",
-      "[ 1.51150373e-01  4.81183543e-01 -1.51150373e-01  7.83484290e-01\n",
-      "  3.60822483e-15  3.30033170e-01]\n",
-      "\n",
-      "Eigenvalue 2: -0.000000\n",
-      "Eigenvector:\n",
-      "[ 3.56585985e-01 -3.44183668e-01 -3.56585985e-01  3.68988301e-01\n",
-      " -4.57966998e-16 -7.00769653e-01]\n",
-      "\n"
-     ]
-    }
-   ],
-   "execution_count": 51
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
