The isoparametric element is still not OK.

--- a/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
+++ b/source/TwoD/Axissymmetric/isoparametric_axissymmetric.ipynb
@@ -16,8 +16,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:31.737719Z",
-     "start_time": "2025-07-25T19:53:31.733405Z"
+     "end_time": "2025-07-26T06:30:12.056383Z",
+     "start_time": "2025-07-26T06:30:12.051585Z"
     }
    },
    "source": [
@@ -26,7 +26,7 @@
     "sp.init_printing()"
    ],
    "outputs": [],
-   "execution_count": 134
+   "execution_count": 58
   },
   {
    "metadata": {},
@@ -55,18 +55,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:31.787139Z",
-     "start_time": "2025-07-25T19:53:31.778601Z"
+     "end_time": "2025-07-26T06:30:12.106741Z",
+     "start_time": "2025-07-26T06:30:12.098800Z"
     }
    },
    "cell_type": "code",
    "source": [
     "\n",
     "### The physical properties of the element\n",
-    "E = 2.0e5  # Young's modulus in Pa\n",
-    "nu = 0.25  # Poisson's ratio\n",
-    "t = 1000  # thickness in mm\n",
-    "t /= 1000  # convert to m\n",
+    "E = 200e9  # Young's modulus in Pa\n",
+    "nu = 0.3  # Poisson's ratio\n",
     "\n",
     "# Define symbolic physical coordinates\n",
     "r1, z1, r2, z2, r3, z3 = sp.symbols('r1 z1 r2 z2 r3 z3')\n",
@@ -75,8 +73,8 @@
     "# physical_coords = {'P1': (0, 0),\n",
     "#                    'P2': (1, 0),\n",
     "#                    'P3': (0, 1)}  # example coordinates for the nodes\n",
-    "physical_coords = {'P1': (4, 0),\n",
-    "                   'P2': (6, 2),\n",
+    "physical_coords = {'P1': (3, 0),\n",
+    "                   'P2': (4, 0),\n",
     "                   'P3': (3, 1)}  # example coordinates for the nodes\n",
     "# physical_coords = {'P1': (0, 0),\n",
     "#                    'P2': (3, 0),\n",
@@ -99,13 +97,13 @@
    ],
    "id": "643385d13f951946",
    "outputs": [],
-   "execution_count": 135
+   "execution_count": 59
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:31.885543Z",
-     "start_time": "2025-07-25T19:53:31.881675Z"
+     "end_time": "2025-07-26T06:30:12.161333Z",
+     "start_time": "2025-07-26T06:30:12.156616Z"
     }
    },
    "cell_type": "code",
@@ -115,7 +113,7 @@
    ],
    "id": "22782e538a273616",
    "outputs": [],
-   "execution_count": 136
+   "execution_count": 60
   },
   {
    "metadata": {},
@@ -126,8 +124,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:32.016783Z",
-     "start_time": "2025-07-25T19:53:32.010787Z"
+     "end_time": "2025-07-26T06:30:12.224350Z",
+     "start_time": "2025-07-26T06:30:12.219453Z"
     }
    },
    "cell_type": "code",
@@ -140,7 +138,7 @@
    ],
    "id": "7cdadabf1b8538b3",
    "outputs": [],
-   "execution_count": 137
+   "execution_count": 61
   },
   {
    "metadata": {},
@@ -151,8 +149,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:32.113746Z",
-     "start_time": "2025-07-25T19:53:32.092955Z"
+     "end_time": "2025-07-26T06:30:12.300639Z",
+     "start_time": "2025-07-26T06:30:12.281044Z"
     }
    },
    "cell_type": "code",
@@ -265,7 +263,7 @@
      ]
     }
    ],
-   "execution_count": 138
+   "execution_count": 62
   },
   {
    "metadata": {},
@@ -286,8 +284,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:32.222398Z",
-     "start_time": "2025-07-25T19:53:32.197491Z"
+     "end_time": "2025-07-26T06:30:12.373850Z",
+     "start_time": "2025-07-26T06:30:12.349358Z"
     }
    },
    "cell_type": "code",
@@ -341,13 +339,13 @@
       "⎣    0       -R - Z + 1  0  R  0  Z⎦\n",
       "\n",
       "The shape function matrix N for this element at node 1:\n",
-      "⎡-4.3333     0     4.3333    0     1.0   0 ⎤\n",
-      "⎢                                          ⎥\n",
-      "⎣   0     -4.3333    0     4.3333   0   1.0⎦\n"
+      "⎡-2.6667     0     3.3333    0     0.3333    0   ⎤\n",
+      "⎢                                                ⎥\n",
+      "⎣   0     -2.6667    0     3.3333    0     0.3333⎦\n"
      ]
     }
    ],
-   "execution_count": 139
+   "execution_count": 63
   },
   {
    "metadata": {},
@@ -358,8 +356,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:32.335928Z",
-     "start_time": "2025-07-25T19:53:32.314308Z"
+     "end_time": "2025-07-26T06:30:12.438586Z",
+     "start_time": "2025-07-26T06:30:12.420243Z"
     }
    },
    "cell_type": "code",
@@ -408,38 +406,38 @@
      "output_type": "stream",
      "text": [
       "The jacobian matrix with coordinate values substituted is:\n",
-      "⎡2  -1⎤\n",
-      "⎢     ⎥\n",
-      "⎣2  1 ⎦\n",
+      "⎡1  0⎤\n",
+      "⎢    ⎥\n",
+      "⎣0  1⎦\n",
       "\n",
       "Jacobian matrix at r=0, z=0:\n",
-      "⎡2  -1⎤\n",
-      "⎢     ⎥\n",
-      "⎣2  1 ⎦\n",
-      "The determinant at this point is |J|=4.00\n",
+      "⎡1  0⎤\n",
+      "⎢    ⎥\n",
+      "⎣0  1⎦\n",
+      "The determinant at this point is |J|=1.00\n",
       "\n",
       "Jacobian matrix at r=0, z=0.3333:\n",
-      "⎡2  -1⎤\n",
-      "⎢     ⎥\n",
-      "⎣2  1 ⎦\n",
-      "The determinant at this point is |J|=4.00\n",
+      "⎡1  0⎤\n",
+      "⎢    ⎥\n",
+      "⎣0  1⎦\n",
+      "The determinant at this point is |J|=1.00\n",
       "\n",
       "Jacobian matrix at r=0.3333, z=0:\n",
-      "⎡2  -1⎤\n",
-      "⎢     ⎥\n",
-      "⎣2  1 ⎦\n",
-      "The determinant at this point is |J|=4.00\n",
+      "⎡1  0⎤\n",
+      "⎢    ⎥\n",
+      "⎣0  1⎦\n",
+      "The determinant at this point is |J|=1.00\n",
       "\n",
       "Jacobian matrix at r=0.3333, z=0.3333:\n",
-      "⎡2  -1⎤\n",
-      "⎢     ⎥\n",
-      "⎣2  1 ⎦\n",
-      "The determinant at this point is |J|=4.00\n",
+      "⎡1  0⎤\n",
+      "⎢    ⎥\n",
+      "⎣0  1⎦\n",
+      "The determinant at this point is |J|=1.00\n",
       "\n"
      ]
     }
    ],
-   "execution_count": 140
+   "execution_count": 64
   },
   {
    "metadata": {},
@@ -454,15 +452,23 @@
     "\\frac{N_i}{r} & 0\n",
     "\\end{bmatrix}$$\n",
     "\n",
-    "One block of the B matrix, which relates the strain to the displacement for node i."
+    "One block of the B matrix, which relates the strain to the displacement for node i.\n",
+    "\n",
+    "The order of the strain vector is:\n",
+    "$$\\varepsilon = \\begin{bmatrix}\n",
+    "\\varepsilon_r \\\\\n",
+    "\\varepsilon_\\theta\\\\\n",
+    "\\varepsilon_z \\\\\n",
+    "\\gamma_{rz} \\\\\n",
+    "\\end{bmatrix}$$"
    ],
    "id": "9f3504c1cd2d518b"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:32.490032Z",
-     "start_time": "2025-07-25T19:53:32.437756Z"
+     "end_time": "2025-07-26T06:30:12.522023Z",
+     "start_time": "2025-07-26T06:30:12.488277Z"
     }
    },
    "cell_type": "code",
@@ -492,10 +498,10 @@
     "        dNi_dz = (1/J_det_symbolic) * (sp.diff(x_map, R) * dNdz[i] - sp.diff(y_map, R) * dNdr[i])\n",
     "\n",
     "        B[0, 2*i] = dNi_dr\n",
-    "        B[1, 2*i+1] = dNi_dz\n",
-    "        B[2, 2*i] = dNi_dz\n",
-    "        B[2, 2*i+1] = dNi_dr\n",
-    "        B[3, 2*i] = N_funcs[i] / r_iso\n",
+    "        B[1, 2*i] = N_funcs[i] / r_iso\n",
+    "        B[2, 2*i+1] = dNi_dz\n",
+    "        B[3, 2*i] = dNi_dz\n",
+    "        B[3, 2*i+1] = dNi_dr\n",
     "\n",
     "    return B\n",
     "\n",
@@ -511,29 +517,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⎡ -0.5    0     0.25    0     0.25    0  ⎤\n",
-      "⎢                                        ⎥\n",
-      "⎢  0      0      0     -0.5    0     0.5 ⎥\n",
-      "⎢                                        ⎥\n",
-      "⎢  0     -0.5   -0.5   0.25   0.5    0.25⎥\n",
-      "⎢                                        ⎥\n",
-      "⎣0.0769   0    0.0769   0    0.0769   0  ⎦\n"
+      "⎡-1.0   0    1.0   0    0    0 ⎤\n",
+      "⎢                              ⎥\n",
+      "⎢0.1    0    0.1   0   0.1   0 ⎥\n",
+      "⎢                              ⎥\n",
+      "⎢ 0    -1.0   0    0    0   1.0⎥\n",
+      "⎢                              ⎥\n",
+      "⎣-1.0  -1.0   0   1.0  1.0   0 ⎦\n"
      ]
     }
    ],
-   "execution_count": 141
+   "execution_count": 65
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### The constitutive matrix $\\begin{bmatrix}D\\end{bmatrix}$",
+   "source": [
+    "### The constitutive matrix $\\begin{bmatrix}D\\end{bmatrix}$\n",
+    "\n",
+    "The constitutive matrix relates the stress vector to the strain vector. For plane stress conditions, it is given by:\n",
+    "$$\n",
+    "\\begin{bmatrix}D\\end{bmatrix} = \\frac{E}{(1 - 2\\nu)(1 + \\nu)} \\begin{bmatrix}\n",
+    "1 - \\nu & \\nu & \\nu & 0 \\\\\n",
+    "\\nu & 1 - \\nu & \\nu & 0 \\\\\n",
+    "\\nu & \\nu & 1 - \\nu & 0 \\\\\n",
+    "0 & 0 & 0 & \\frac{1 - 2\\nu}{2\n",
+    "}\n",
+    "\\end{bmatrix}\n",
+    "$$\n"
+   ],
    "id": "92b687e6a3f25c2e"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:32.569400Z",
-     "start_time": "2025-07-25T19:53:32.562308Z"
+     "end_time": "2025-07-26T06:32:12.558673Z",
+     "start_time": "2025-07-26T06:32:12.535548Z"
     }
    },
    "cell_type": "code",
@@ -547,19 +566,43 @@
     "    D[0, 0] = 1 - nu\n",
     "    D[0, 1] = nu\n",
     "    D[0, 2] = nu\n",
+    "\n",
     "    D[1, 0] = nu\n",
     "    D[1, 1] = 1 - nu\n",
     "    D[1, 2] = nu\n",
+    "\n",
     "    D[2, 0] = nu\n",
     "    D[2, 1] = nu\n",
     "    D[2, 2] = 1 - nu\n",
+    "\n",
     "    D[3, 3] = (1 - 2 * nu) / 2\n",
     "\n",
-    "    return D"
+    "    D *= E / ((1 - 2 * nu) * (1 + nu))\n",
+    "\n",
+    "    return D\n",
+    "\n",
+    "D = D_matrix()\n",
+    "sp.pprint(D.applyfunc(lambda x: round(x/1e9, 2)))\n",
+    "print(D.T == D)"
    ],
    "id": "f885db57739e6b2f",
-   "outputs": [],
-   "execution_count": 142
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "⎡269.23  115.38  115.38    0  ⎤\n",
+      "⎢                             ⎥\n",
+      "⎢115.38  269.23  115.38    0  ⎥\n",
+      "⎢                             ⎥\n",
+      "⎢115.38  115.38  269.23    0  ⎥\n",
+      "⎢                             ⎥\n",
+      "⎣  0       0       0     76.92⎦\n",
+      "True\n"
+     ]
+    }
+   ],
+   "execution_count": 71
   },
   {
    "metadata": {},
@@ -570,8 +613,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:32.666180Z",
-     "start_time": "2025-07-25T19:53:32.661183Z"
+     "end_time": "2025-07-26T06:30:12.631496Z",
+     "start_time": "2025-07-26T06:30:12.624210Z"
     }
    },
    "cell_type": "code",
@@ -589,7 +632,7 @@
    ],
    "id": "921a4b0f9b91c935",
    "outputs": [],
-   "execution_count": 143
+   "execution_count": 67
   },
   {
    "metadata": {},
@@ -600,8 +643,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T20:03:01.067325Z",
-     "start_time": "2025-07-25T20:03:00.849791Z"
+     "end_time": "2025-07-26T07:25:36.006942Z",
+     "start_time": "2025-07-26T07:25:35.797869Z"
     }
    },
    "cell_type": "code",
@@ -632,7 +675,7 @@
     "            r_physical_at_gp = r_iso.subs(physical_coords_map).subs({R: r_gp, Z: z_gp}).evalf()\n",
     "\n",
     "            # Calculate the stiffness matrix contribution with the 2*pi*r term\n",
-    "            K_contribution = B_evaluated.T * D * B_evaluated * 2 * sp.pi * r_physical_at_gp * det_J * w\n",
+    "            K_contribution = 2 * sp.pi * B_evaluated.T * D * B_evaluated * r_physical_at_gp * det_J * w\n",
     "            K_lok += K_contribution\n",
     "\n",
     "    return K_lok\n",
@@ -641,7 +684,7 @@
     "print()\n",
     "K_e = K_matrix()\n",
     "print('The full stiffness matrix K is:')\n",
-    "sp.pprint(K_e.applyfunc(lambda x: round(x, 4)))\n",
+    "sp.pprint(K_e.applyfunc(lambda x: round(x/1e12, 4)))\n",
     "K_e = np.array(K_e).astype(np.float64)\n",
     "\n",
     "# 1. Berechnen Sie die Steifigkeitsmatrix mit NG=1\n",
@@ -675,30 +718,30 @@
      "text": [
       "\n",
       "The full stiffness matrix K is:\n",
-      "⎡20.5815    6.8068   -3.2423    3.4034   -16.8559  -10.2102⎤\n",
-      "⎢                                                          ⎥\n",
-      "⎢ 6.8068   20.4204    17.017   -3.4034   -23.8237  -17.017 ⎥\n",
-      "⎢                                                          ⎥\n",
-      "⎢-3.2423    17.017   18.8798   -5.1051   -15.1542  -11.9119⎥\n",
-      "⎢                                                          ⎥\n",
-      "⎢ 3.4034   -3.4034   -5.1051   18.7187    1.7017   -15.3153⎥\n",
-      "⎢                                                          ⎥\n",
-      "⎢-16.8559  -23.8237  -15.1542   1.7017   32.4933    22.122 ⎥\n",
-      "⎢                                                          ⎥\n",
-      "⎣-10.2102  -17.017   -11.9119  -15.3153   22.122   32.3322 ⎦\n",
+      "⎡6.8229    3.786   -5.5824  -1.6111  -1.7963  -2.1749⎤\n",
+      "⎢                                                    ⎥\n",
+      "⎢ 3.786   7.2498   -2.6583  -1.6111  -1.8527  -5.6388⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-5.5824  -2.6583  6.1785      0      0.298   2.6583 ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-1.6111  -1.6111     0     1.6111   1.6111      0   ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎢-1.7963  -1.8527   0.298   1.6111   1.6675   0.2417 ⎥\n",
+      "⎢                                                    ⎥\n",
+      "⎣-2.1749  -5.6388  2.6583      0     0.2417   5.6388 ⎦\n",
       "0.0\n",
-      "191.3638157716567\n",
-      "191.3638157716567\n"
+      "39888828990581.21\n",
+      "39888828990581.21\n"
      ]
     }
    ],
-   "execution_count": 157
+   "execution_count": 72
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-25T19:53:33.029668Z",
-     "start_time": "2025-07-25T19:53:33.020011Z"
+     "end_time": "2025-07-26T06:30:13.069926Z",
+     "start_time": "2025-07-26T06:30:13.060941Z"
     }
    },
    "cell_type": "code",
@@ -734,17 +777,12 @@
      "text": [
       "\n",
       "The eigenvalues of the stiffness matrix K are:\n",
-      "[0.0, 0.15345, 1.48251, 67.87042, 102.19205, 259.3478]\n",
-      "The eigenvectors for the near-zero eigenvalues are:\n",
-      "Eigenvalue 1: 0.000000\n",
-      "Eigenvector:\n",
-      "[-6.53426378e-15  5.77350269e-01 -5.26523269e-14  5.77350269e-01\n",
-      "  3.94684285e-14  5.77350269e-01]\n",
-      "\n"
+      "[-0.0037, -0.00055, 125205187946.65376, 4261974693202.828, 6444292622748.29, 18337006979816.68]\n",
+      "The eigenvectors for the near-zero eigenvalues are:\n"
      ]
     }
    ],
-   "execution_count": 145
+   "execution_count": 69
   }
  ],
  "metadata": {
